--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -24,14 +24,14 @@ body {
 }
 
 header{
-	background-color:#b8fcf7;
+	background-color:#00bbfa;
 	height: 100px;
 	padding: 20px;
 }
 
 footer{
 	clear: both;
-	background-color:#ffffff;
+	background-color:#00bbfa;
 	height: 50px;
 	text-align: center;
 	padding: 10px;
@@ -41,14 +41,14 @@ footer{
 }
 
 h1{
-	color:#f76f3e;
-	text-shadow:1px 1px 1px #111111;
+	text-shadow: 2px 2px 2px #ffffff;
 	text-align: center;
 	margin:0 0 50px 0;
 }
 
 #principal {
-    background-image: url('/imagens/cidade.jpg');
+    background-image: url('/imagens/cidade.png');
+    background-color: #111;
     clear: both;
     background-size: 100%;
     min-height: 670px;
@@ -71,13 +71,20 @@ h1{
 }
 
 #menu a:hover{
-	background-color:#66CDAA;
+	background-color:#59d5ff;
 	color:#111;
 }
 
 .container {
     width: 960px;
     margin: 0 auto;
+}
+
+.titulo {
+    color: white;
+    text-shadow: 1px 1px 1px #111;
+	text-align: center;
+	margin:0 0 50px 0;
 }
 
 .center-button {
